--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -22,7 +22,9 @@
     <item drawable="google_lens" />
     <item drawable="google_maps" />
     <item drawable="google_pay" />
+    <item drawable="google_pay_alt" />
     <item drawable="google_photos" />
+    <item drawable="google_photos_alt" />
     <item drawable="google_play_books_new" />
     <item drawable="google_play_games" />
     <item drawable="google_play_movies" />
@@ -37,10 +39,13 @@
 
 
     <category title="Apps" />
+    <item drawable="aarogya_setu" />
     <item drawable="airtel" />
+    <item drawable="allcast" />
     <item drawable="android_terminal" />
     <item drawable="app_drawer" />
     <item drawable="avast_antivirus" />
+    <item drawable="avira_antivirus" />
     <item drawable="bitmoji" />
     <item drawable="bookmyshow" />
     <item drawable="boost" />
@@ -60,6 +65,7 @@
     <item drawable="ebook" />
     <item drawable="email_blue" />
     <item drawable="email_yellow" />
+    <item drawable="feedly" />
     <item drawable="feedly_alt" />
     <item drawable="firefox" />
     <item drawable="gallery" />
@@ -72,9 +78,11 @@
     <item drawable="manager" />
     <item drawable="messages" />
     <item drawable="microsoft_launcher" />
+    <item drawable="microsoft_lens" />
     <item drawable="microsoft_office" />
     <item drawable="microsoft_onedrive" />
     <item drawable="microsoft_outlook" />
+    <item drawable="microsoft_teams" />
     <item drawable="music" />
     <item drawable="news" />
     <item drawable="notes" />
@@ -82,25 +90,33 @@
     <item drawable="ola_cabs" />
     <item drawable="password" />
     <item drawable="paytm" />
+    <item drawable="paytm_alt" />
     <item drawable="phone_alt" />
     <item drawable="phone_blue" />
     <item drawable="phone_green" />
+    <item drawable="polycon" />
     <item drawable="print" />
+    <item drawable="radio" />
     <item drawable="reader" />
     <item drawable="services" />
     <item drawable="settings_blue" />
     <item drawable="settings_green" />
     <item drawable="shader" />
     <item drawable="shazam" />
+    <item drawable="sim_toolkit" />
+    <item drawable="snapchat" />
     <item drawable="spotify" />
+    <item drawable="student" />
     <item drawable="swiggy" />
     <item drawable="telegram" />
+    <item drawable="train" />
     <item drawable="uber" />
     <item drawable="wallet" />
     <item drawable="weather" />
     <item drawable="weather_alt" />
     <item drawable="whatsapp" />
     <item drawable="yellow_dot" />
+    <item drawable="zipped" />
     <item drawable="___vlc" />
 
 
