--- a/app/src/main/res/values/about_setup.xml
+++ b/app/src/main/res/values/about_setup.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation,MissingTranslation">
     <string-array name="credits_photos" formatted="false" tools:ignore="TypographyDashes">
-        <item>https://cdn.jsdelivr.net/gh/kunal-ma/container/shader-app/artwork/profile.jpg</item>
+        <item>https://cdn.jsdelivr.net/gh/kunal-ma/shader@main/external/artwork/profile.jpg</item>
     </string-array>
 
     <string-array name="credits_titles">
